--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "name": "nocms-publishing",
-  "version": "1.0.0",
+  "version": "0.0.0-development",
   "description": "Publisher interface for NoCMS",
   "main": "lib/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack --watch",
     "prepare": "babel ./src --out-dir ./lib --source-maps --presets env,react",
-    "eslint": "eslint --ext .js, .jsx ."
+    "eslint": "eslint --ext .js, .jsx .",
+    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/miles-no/nocms-publishing.git"
+    "url": "https://github.com/miles-no/nocms-publishing.git"
   },
   "keywords": [
     "react",
@@ -24,6 +25,7 @@
   },
   "homepage": "https://github.com/miles-no/nocms-publishing#readme",
   "dependencies": {
+    "cloudinary-core": "^2.3.0",
     "moment": "^2.19.1",
     "nocms-ajax": "^1.0.0",
     "nocms-atoms": "^1.0.2",
@@ -43,6 +45,7 @@
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "condition-circle": "^1.5.0",
     "eslint": "^4.10.0",
     "eslint-config-webteam": "^2.0.0",
     "eslint-loader": "^1.9.0",
@@ -51,9 +54,13 @@
     "eslint-plugin-react": "^7.4.0",
     "react": "^15.6.2",
     "react-dom": "^15.6.2",
+    "semantic-release": "^8.2.0",
     "webpack": "^3.8.1"
   },
   "peerDependencies": {
     "react": "^15.0.0 || ^16.0.0"
+  },
+  "release": {
+    "verifyConditions": "condition-circle"
   }
 }
