--- a/circle.yml
+++ b/circle.yml
@@ -5,4 +5,4 @@ test:
   override:
     - echo "TESTS ARE MANUALLY OVERRIDEN IN circle.yml. No tests"
   post:
-    - DEBUG=condition npm run semantic-release || true
+    - npm run
