--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nocms-publishing",
-  "version": "0.0.0-semantic-release",
+  "version": "1.1.0",
   "description": "Publisher interface for NoCMS",
   "main": "lib/index.js",
   "scripts": {
