feat: add style attribute

--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version":"0.0.0-semantic-release",
   "description": "Publisher interface for NoCMS",
   "main": "lib/index.js",
+  "style": "lib/styles/index.css",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepare": "npm run build-js && npm run build-css",
     "eslint": "eslint --ext .js, .jsx .",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post",
     "build-js": "babel ./src --out-dir ./lib --source-maps --presets env,react",
-    "build-css": "postcss --config ./postcss.config.js --output lib/index.css styles/index.css"
+    "build-css": "postcss --config ./postcss.config.js --output lib/styles/index.css styles/index.css"
   },
   "repository": {
     "type": "git",
