--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,11 @@
 {
   "presets": [
-    ["env", {
+    ["@babel/env", {
       "targets": {
         "browsers": ["last 2 versions", "IE 11"]
       },
       "debug": false
     }],
-    "react"
+    "@babel/react"
   ]
 }
