--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "prepare": "npm run build-js && npm run build-css",
     "eslint": "eslint --ext .js, .jsx .",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post",
-    "build-js": "babel ./src --out-dir ./lib --source-maps --presets env,react",
+    "build-js": "babel ./src --out-dir ./lib --source-maps",
     "build-css": "postcss --config ./postcss.config.js --output lib/styles/index.css styles/index.css"
   },
   "repository": {
@@ -41,11 +41,11 @@
     "uuid": "^3.1.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
+    "@babel/cli": "^7.0.0-beta.34",
+    "@babel/preset-env": "^7.0.0-beta.34",
+    "@babel/core": "^7.0.0-beta.34",
+    "@babel/preset-react": "^7.0.0-beta.34",
     "babel-eslint": "^8.0.3",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
     "condition-circle": "^1.5.0",
     "eslint": "^4.12.1",
     "eslint-config-webteam": "^2.0.0",
