--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "@babel/core": "^7.0.0-beta.34",
     "@babel/preset-react": "^7.0.0-beta.34",
     "babel-eslint": "^8.0.3",
-    "condition-circle": "^1.5.0",
+    "condition-circle": "1.5.0",
     "eslint": "^4.12.1",
     "eslint-config-webteam": "^2.0.0",
     "eslint-loader": "^1.9.0",
