--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "style": "lib/styles/index.css",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "webpack --watch",
     "prepare": "npm run build-js && npm run build-css",
     "eslint": "eslint --ext .js, .jsx .",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post",
@@ -42,24 +43,32 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0-beta.34",
-    "@babel/preset-env": "^7.0.0-beta.34",
     "@babel/core": "^7.0.0-beta.34",
+    "@babel/preset-env": "^7.0.0-beta.34",
     "@babel/preset-react": "^7.0.0-beta.34",
     "babel-eslint": "^8.0.3",
+    "babel-loader": "^8.0.0-beta.0",
     "condition-circle": "1.5.0",
+    "css-loader": "^0.28.7",
     "eslint": "^4.12.1",
     "eslint-config-webteam": "^2.0.0",
     "eslint-loader": "^1.9.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.5.1",
+    "extract-text-webpack-plugin": "^3.0.2",
     "postcss-cli": "^4.1.1",
     "postcss-cssnext": "^3.0.2",
     "postcss-import": "^11.0.0",
+    "postcss-loader": "^2.0.9",
     "postcss-url": "^7.3.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "semantic-release": "^8.2.3"
+    "semantic-release": "^8.2.3",
+    "style-loader": "^0.19.0",
+    "watch": "^1.0.2",
+    "webpack": "^3.10.0",
+    "webpack-dev-server": "^2.9.7"
   },
   "peerDependencies": {
     "react": "^15.0.0 || ^16.0.0",
