feat: added nocms as keyword (just to trigger republish, sorry)

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   },
   "keywords": [
     "react",
-    "publishing"
+    "publishing",
+    "nocms"
   ],
   "author": "Wenche Tollevsen",
   "license": "MIT",
