fix: forgot to build the code, so added cms to keywords in package.json (just to trigger new release, sorry :( )

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "keywords": [
     "react",
     "publishing",
-    "nocms"
+    "nocms",
+    "cms"
   ],
   "author": "Wenche Tollevsen",
   "license": "MIT",
