--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "nocms-utils": "^1.1.1",
     "prop-types": "^15.6.0",
     "react-aria-modal": "^2.11.1",
+    "react-dropzone": "^4.2.3",
     "uuid": "^3.1.0"
   },
   "devDependencies": {
