--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "nocms-base-styles": "^1.1.1",
     "nocms-events": "^1.2.0",
     "nocms-forms": "^4.1.1",
+    "nocms-i18n": "^1.0.3",
     "nocms-image-cropper": "^1.2.1",
     "nocms-shortcuts": "^1.0.1",
     "nocms-utils": "^1.1.1",
