--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
     "build-js": "babel ./src --out-dir ./lib --source-maps",
     "build-css": "postcss --config ./postcss.config.js --output lib/styles/index.css styles/index.css"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "echo Executing eslint. Please wait... && npm run eslint"
+    }
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/miles-no/nocms-publishing.git"
@@ -63,6 +68,7 @@
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.5.1",
     "extract-text-webpack-plugin": "^3.0.2",
+    "husky": "^0.15.0-rc.8",
     "postcss-cli": "^4.1.1",
     "postcss-cssnext": "^3.0.2",
     "postcss-import": "^11.0.0",
