--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "nocms-ajax": "^1.0.0",
     "nocms-atoms": "^1.9.0",
     "nocms-base-styles": "^1.1.1",
+    "nocms-cloudinary-utils": "^2.0.0",
     "nocms-events": "^1.2.0",
     "nocms-forms": "^4.1.1",
     "nocms-i18n": "^1.0.3",
