--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "dev": "webpack --watch",
     "dev:backend": "node example/server.js",
     "prepare": "npm run build-js && npm run build-css",
+    "nsp": "nsp check",
     "eslint": "eslint --ext .js, .jsx .",
-    "semantic-release": "semantic-release pre && npm publish && semantic-release post",
     "build-js": "babel ./src --out-dir ./lib --source-maps",
     "build-css": "postcss --config ./postcss.config.js --output lib/styles/index.css styles/index.css"
   },
@@ -61,7 +61,6 @@
     "@babel/preset-react": "^7.0.0-beta.34",
     "babel-eslint": "^8.2.2",
     "babel-loader": "^8.0.0-beta.0",
-    "condition-circle": "1.5.0",
     "cors": "^2.8.4",
     "css-loader": "^0.28.11",
     "eslint": "^4.19.1",
@@ -73,6 +72,7 @@
     "express": "^4.16.3",
     "extract-text-webpack-plugin": "^3.0.2",
     "husky": "^0.15.0-rc.8",
+    "nsp": "^3.2.1",
     "postcss-cli": "^4.1.1",
     "postcss-cssnext": "^3.1.0",
     "postcss-import": "^11.1.0",
@@ -80,7 +80,7 @@
     "postcss-url": "^7.3.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "semantic-release": "^8.2.3",
+    "semantic-release": "^15.1.7",
     "style-loader": "^0.19.1",
     "watch": "^1.0.2",
     "webpack": "^3.10.0",
@@ -89,8 +89,5 @@
   "peerDependencies": {
     "react": "^15.0.0 || ^16.0.0",
     "react-dom": "^15.0.0 || ^16.0.0"
-  },
-  "release": {
-    "verifyConditions": "condition-circle"
   }
 }
