--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,9 +7,7 @@ jobs:
       - checkout
       - run:
           name: Install npm packages
-          command: |
-            npm install -g npm@latest
-            npm ci
+          command: npm i
       - run:
           name: Linting
           command: npm run eslint
@@ -24,11 +22,6 @@ jobs:
       - image: circleci/node:9.5.0
     steps:
       - checkout
-      - run:
-          name: Install npm packages
-          command: |
-            npm install -g npm@latest
-            npm ci
       - run: npx semantic-release
 
 workflows:
