--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "nocms-shortcuts": "^1.0.1",
     "nocms-utils": "^1.2.1",
     "prop-types": "^15.6.1",
-    "react-aria-modal": "^2.12.1",
+    "react-aria-modal": "2.12.1",
     "react-dropzone": "^4.2.9",
     "uuid": "^3.2.1"
   },
